assets/queries/cloudFormation/aws/db_security_group_with_public_scope/test/positive6.json
{
  "Resources": {
    "DBEC2SecurityGroup2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "GroupDescription": "Open database for access",
        "SecurityGroupIngress": [
          {
            "CidrIpv6": "::/0",
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          }
        ]
      }
    },
    "DBInstance3": {
      "Properties": {
        "Engine": "MySQL",
        "AllocatedStorage": {
          "Ref": "DBAllocatedStorage"
        },
        "MasterUserPassword": {
          "Ref": "DBPassword"
        },
        "VPCSecurityGroups": [
          "DBEC2SecurityGroup2.GroupId"
        ],
        "PubliclyAccessible": true,
        "DBName": {
          "Ref": "DBName"
        },
        "MultiAZ": {
          "Ref": "MultiAZDatabase"
        },
        "MasterUsername": {
          "Ref": "DBUser"
        },
        "DBInstanceClass": {
          "Ref": "DBClass"
        }
      },
      "Type": "AWS::RDS::DBInstance"
    }
  }
}
